Added test results from inferential statistical analysis

--- a/data-exploration.ipynb
+++ b/data-exploration.ipynb
@@ -5163,7 +5163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 117,
    "id": "9694e25d",
    "metadata": {},
    "outputs": [
@@ -5173,7 +5173,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5189,7 +5189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 118,
    "id": "39642650",
    "metadata": {},
    "outputs": [],
@@ -5199,7 +5199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 120,
    "id": "39757df5",
    "metadata": {},
    "outputs": [
@@ -5347,7 +5347,7 @@
        "4   111.8   "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5963,7 +5963,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "7f466122",
+   "id": "60eb9f65",
    "metadata": {},
    "outputs": [
     {
@@ -6061,7 +6061,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "c40a94c2",
+   "id": "be30d790",
    "metadata": {},
    "outputs": [
     {
@@ -6083,7 +6083,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "bffaed99",
+   "id": "05f4ca22",
    "metadata": {},
    "outputs": [
     {
@@ -6183,7 +6183,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "f7e6fffb",
+   "id": "cb16c894",
    "metadata": {},
    "outputs": [
     {
@@ -6208,7 +6208,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "9c4da8b4",
+   "id": "a751b4a8",
    "metadata": {},
    "outputs": [
     {
@@ -6307,7 +6307,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "a46dc2d9",
+   "id": "278451e5",
    "metadata": {},
    "outputs": [
     {
@@ -6395,10 +6395,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fd90803",
+   "id": "70f82cf7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Source: https://data.europa.eu/data/datasets/4142-production-on-buildings-price-index-2015-100?locale=en\n",
+    "# https://opendata.cbs.nl/statline/#/CBS/en/dataset/83547ENG/table"
+   ]
   }
  ],
  "metadata": {
