Finalized Report and all notebooks

--- a/data-exploration.ipynb
+++ b/data-exploration.ipynb
@@ -9,9 +9,17 @@
     "- [National Housing Cost Index](#National-Housing-Cost-Index)\n",
     "- [Planning Permissions Granted](#Planning-Permissions-Granted)\n",
     "- [Construction Sector by Type of Building and Construction](#Construction-Sector-by-Type-of-Building-and-Construction)\n",
+    "- [Wholesale-Price-Index-(Excl-VAT)-for-Building-and-Construction-Materials](#WPM28---Wholesale-Price-Index-(Excl-VAT)-for-Building-and-Construction-Materials)\n",
     "- [New Dwelling Completion](#New-Dwelling-Completion)\n",
     "- [ESB Connections](#ESB-Connections)\n",
-    "- [Average Earnings](#EHQ03---Average-Earnings,-Hours-Worked,-Employment-and-Labour-Costs)"
+    "- [Average Earnings](#EHQ03---Average-Earnings,-Hours-Worked,-Employment-and-Labour-Costs)\n",
+    "- [Commencement Notices](#Commencement-Notices)\n",
+    "- [New House Registrations](#New-House-Registrations)\n",
+    "- [National Housing Development Survey 2012](#National-Housing-Development-Survey-2012)\n",
+    "- [Average Earnings](#EHQ03---Average-Earnings,-Hours-Worked,-Employment-and-Labour-Costs)\n",
+    "- [Eurostat Production in Construction](#Eurostat-Production-in-Construction)\n",
+    "\n",
+    "<br>NOTE: This notebook only contains the intitial exploration of all the datasets that were reviewed for this study. Only few of them were further analyzed and used in later sections of the main notebook (construction-materials-and-production.ipynb)."
    ]
   },
   {
